--- a/templates/chat.html
+++ b/templates/chat.html
@@ -10,7 +10,11 @@
 
 <body>
 	<h1>Welcome, {{ username }} </h1>
-	
+
+    <form method ="POST">
+        <textarea cols="50" rows="4" name="message" id="message"></textarea>
+        <br>
+        <button>Send Message</button>
     {% for message in chat_messages %}
 	<p>({{ message.timestamp }}) {{ message.from }}: {{ message.message }}</p>
 	{% endfor %}
